<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/widthLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/width_prompt" />

        <EditText
            android:id="@+id/widthField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height_prompt" />

        <EditText
            android:id="@+id/heightField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/sizeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_prompt" />

        <EditText
            android:id="@+id/sizeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_prompt" />

        <EditText
            android:id="@+id/resultField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none" />

        <CheckBox
            android:id="@+id/toggleRounding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/round_result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onResetClick"
                android:text="@string/reset_label" />

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCalculateClick"
                android:text="@string/calculate_label" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>